# openweb-ui-configs

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  update.sh
functions/: EXA_CREWAI_USAGE.md  exa_crewai_answer.py  exa_openrouter_direct.py  perplexity_sonar_api_with_citations.py  test_valve.py
functions/open_webui/utils/: misc.py
